--- a/.github/workflows/php-security.yml
+++ b/.github/workflows/php-security.yml
@@ -48,7 +48,7 @@ jobs:
       run: php ./vendor/bin/psalm --taint-analysis --php-version='8.2'
 
     - name: PHP Design Security
-      run: ./vendor/bin/progpilot --configuration progpilot.yml html_headers.php category.php generate_template.php gitpull.php linked_pages.php process_page.php authenticate.php
+      run: ./vendor/bin/progpilot --configuration progpilot.yml category.php generate_template.php gitpull.php linked_pages.php process_page.php authenticate.php
 
     - name: The PHP Security Checker
       uses: symfonycorp/security-checker-action@v4
