--- a/.github/workflows/php-static2.yml
+++ b/.github/workflows/php-static2.yml
@@ -45,7 +45,7 @@ jobs:
       run: composer install --prefer-dist  -vvv --no-progress
 
     - name: PHP phpstan
-      run: php ./vendor/bin/phpstan --no-interaction analyse --memory-limit=2G constants/*.php Parameter.php user_messages.php constants.php big_jobs.php setup.php expandFns.php Zotero.php apiFunctions.php NameTools.php Comment.php Page.php WikipediaBot.php Template.php category.php generate_template.php linked_pages.php process_page.php authenticate.php
+      run: php ./vendor/bin/phpstan --no-interaction analyse --memory-limit=2G constants/*.php Parameter.php user_messages.php constants.php big_jobs.php setup.php expandFns.php Zotero.php apiFunctions.php NameTools.php Comment.php Page.php WikipediaBot.php Template.php category.php generate_template.php linked_pages.php process_page.php authenticate.php env.php.example
 
     - name: PHP phan 8.2
       run: php ./vendor/bin/phan --analyze-twice --allow-polyfill-parser --target-php-version='8.2' --minimum-target-php-version='8.2'
