--- a/.github/workflows/test-suite.yml
+++ b/.github/workflows/test-suite.yml
@@ -38,7 +38,7 @@ jobs:
           ${{ runner.os }}-php-
 
     - name: Configure composer and dependencies
-      run: composer config allow-plugins.third-party/required-plugin true && composer config minimum-stability dev && composer config prefer-stable true && composer require mediawiki/oauthclient:2.1.0  phpunit/phpunit:9.*.*
+      run: composer config allow-plugins.third-party/required-plugin true && composer config minimum-stability dev && composer config prefer-stable true && composer require mediawiki/oauthclient:dev-master  phpunit/phpunit:9.*.*
       
     - name: Install dependencies
       if: steps.composer-cache.outputs.cache-hit != 'true'
