--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,6 @@
     "license": "GPL-3.0-or-later",
     "description": "Expands CS1/CS2 citation templates on Wikipedia",
     "require": {
-        "mediawiki/oauthclient": "dev-master"
+        "mediawiki/oauthclient": "2.2.0"
     }
 }
