--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<phpunit stopOnError="false" >
+<phpunit>
   <testsuites>
     <testsuite name="TestSuite">
       <directory suffix=".php">./tests/phpunit</directory>
