--- a/env.php.example
+++ b/env.php.example
@@ -1,4 +1,7 @@
 <?php
+if (get_included_files()[0] === __FILE__) {
+    exit;
+}
 /** Suppress all errors to avoid accidently printing something of value */
 if (!getenv('PHP_OAUTH_CONSUMER_TOKEN')) {
     try {
