--- a/env.php.example
+++ b/env.php.example
@@ -1,6 +1,6 @@
 <?php
 if (get_included_files()[0] === __FILE__) {
-    exit;
+    exit; // Only need this code if web-server does not block this file
 }
 /** Suppress all errors to avoid accidently printing something of value */
 if (!getenv('PHP_OAUTH_CONSUMER_TOKEN')) {
