--- a/composer.json
+++ b/composer.json
@@ -4,5 +4,8 @@
     "description": "Expands CS1/CS2 citation templates on Wikipedia",
     "require": {
         "mediawiki/oauthclient": "2.3.0"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^9"
     }
 }
