--- a/.github/workflows/php-static2.yml
+++ b/.github/workflows/php-static2.yml
@@ -38,7 +38,7 @@ jobs:
           ${{ runner.os }}-php-
 
     - name: Configure composer and dependencies
-      run: composer config allow-plugins.third-party/required-plugin true && composer config minimum-stability dev && composer config prefer-stable true && composer require mediawiki/oauthclient:2.3.0 && composer require phpstan/phpstan:^1.12.9 phan/phan
+      run: composer config allow-plugins.third-party/required-plugin true && composer config minimum-stability dev && composer config prefer-stable true && composer require mediawiki/oauthclient:2.3.0 && composer require phpstan/phpstan:^1.12.9
 
     - name: Install dependencies
       if: steps.composer-cache.outputs.cache-hit != 'true'
@@ -46,10 +46,3 @@ jobs:
 
     - name: PHP phpstan
       run: php ./vendor/bin/phpstan --no-interaction analyse --memory-limit=2G constants/*.php Parameter.php user_messages.php constants.php big_jobs.php setup.php expandFns.php Zotero.php apiFunctions.php NameTools.php Comment.php Page.php WikipediaBot.php Template.php category.php generate_template.php linked_pages.php process_page.php authenticate.php
-
-    - name: PHP phan 8.2
-      run: php ./vendor/bin/phan --analyze-twice --allow-polyfill-parser --target-php-version='8.2' --minimum-target-php-version='8.2'
-     
-    - name: PHP phan 8.4
-      run: php ./vendor/bin/phan --analyze-twice --allow-polyfill-parser --target-php-version='8.4' --minimum-target-php-version='8.4'
-     
