--- a/.github/workflows/psalm.yml
+++ b/.github/workflows/psalm.yml
@@ -1,4 +1,4 @@
-name: PHP Static Coding Tests Part 1
+name: PHP Static Coding Tests - psalm
 
 on:
   push:
@@ -38,7 +38,7 @@ jobs:
           ${{ runner.os }}-php-
 
     - name: Configure composer and dependencies
-      run: composer config allow-plugins.third-party/required-plugin true && composer config minimum-stability dev && composer config prefer-stable true && composer require mediawiki/oauthclient:2.3.0 && composer require overtrue/phplint:8.*.* vimeo/psalm:5.13.1 
+      run: composer config allow-plugins.third-party/required-plugin true && composer config minimum-stability dev && composer config prefer-stable true && composer require mediawiki/oauthclient:2.3.0 && composer require vimeo/psalm:5.13.1 
 
     - name: Install dependencies
       if: steps.composer-cache.outputs.cache-hit != 'true'
@@ -46,6 +46,3 @@ jobs:
 
     - name: PHP psalm
       run: php ./vendor/bin/psalm --php-version='8.2'
-
-    - name: PHP Lint test
-      run: ./vendor/bin/phplint --exclude=vendor --no-interaction --no-configuration -vv ./
