--- a/.github/workflows/psalm-security.yml
+++ b/.github/workflows/psalm-security.yml
@@ -1,4 +1,4 @@
-name: PHP Static Security Tests
+name: PHP Static Security Tests - psalm
 
 on:
   push:
@@ -38,7 +38,7 @@ jobs:
           ${{ runner.os }}-php-
 
     - name: Configure composer and dependencies
-      run: composer config allow-plugins.third-party/required-plugin true && composer config minimum-stability dev && composer config prefer-stable true && composer require mediawiki/oauthclient:2.0.0 && composer require vimeo/psalm designsecurity/progpilot:1.0.2
+      run: composer config allow-plugins.third-party/required-plugin true && composer config minimum-stability dev && composer config prefer-stable true && composer require mediawiki/oauthclient:2.0.0 && composer require vimeo/psalm
 
     - name: Install dependencies
       if: steps.composer-cache.outputs.cache-hit != 'true'
@@ -46,15 +46,3 @@ jobs:
 
     - name: PHP psalm Taint
       run: php ./vendor/bin/psalm --taint-analysis --php-version='8.2'
-
-    - name: PHP Design Security
-      run: ./vendor/bin/progpilot --configuration progpilot.yml category.php generate_template.php gitpull.php linked_pages.php process_page.php authenticate.php
-
-    - name: The PHP Security Checker
-      uses: symfonycorp/security-checker-action@v4
-
-    - name: PHP Security Checker
-      uses: StephaneBour/actions-php-security-checker@1.1
-
-    - name: PHP psalm Taint 8.3
-      run: php ./vendor/bin/psalm --taint-analysis --php-version='8.3'
