--- a/progpilot.yml
+++ b/progpilot.yml
@@ -25,7 +25,7 @@ inputs:
         - ".phan"
         - "gitpull.php"
     resolved_includes_file: ~
-    false_positives: progpilot.json  #  we do not verify some SSL things
+    false_positives: progpilot.json
 
 outputs:
     tainted_flow: true
@@ -38,5 +38,3 @@ options:
     max_file_analysis_duration: 30
     max_definitions: 500
     max_file_size: 1000000
-
-
