--- a/progpilot.yml
+++ b/progpilot.yml
@@ -25,7 +25,7 @@ inputs:
         - ".phan"
         - "gitpull.php"
     resolved_includes_file: ~
-    false_positives: progpilot.json
+    false_positives: ~
 
 outputs:
     tainted_flow: true
