--- a/.github/workflows/trivy-analysis.yml
+++ b/.github/workflows/trivy-analysis.yml
@@ -31,7 +31,7 @@ jobs:
           format: 'sarif'
           output: ${{ env.SARIF_FILE }}
           severity: 'CRITICAL'
-          config: trivy-analysis.yml
+          trivy-config: trivy-analysis.yml
 
       - name: Check Trivy scan results existence
         run: |
