--- a/.github/workflows/test-suite.yml
+++ b/.github/workflows/test-suite.yml
@@ -37,9 +37,12 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-php-
 
+    - name: Configure composer
+      run: composer config allow-plugins.third-party/required-plugin true && composer config minimum-stability dev && composer config prefer-stable true
+
     - name: Configure composer and dependencies
-      run: composer config allow-plugins.third-party/required-plugin true && composer config minimum-stability dev && composer config prefer-stable true && composer require mediawiki/oauthclient:2.3.0 phpunit/phpunit:9.*.* phpunit/php-invoker
-      
+      run: composer require mediawiki/oauthclient:2.3.0 phpunit/phpunit:9.*.* phpunit/php-invoker
+
     - name: Install dependencies
       if: steps.composer-cache.outputs.cache-hit != 'true'
       run: composer install --prefer-dist  -vvv --no-progress
