--- a/.github/workflows/phpstan.yml
+++ b/.github/workflows/phpstan.yml
@@ -37,8 +37,11 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-php-
 
-    - name: Configure composer and dependencies
-      run: composer config allow-plugins.third-party/required-plugin true && composer config minimum-stability dev && composer config prefer-stable true && composer require mediawiki/oauthclient:2.3.0 && composer require phpstan/phpstan:^1.12.9
+    - name: Configure composer
+      run: composer config allow-plugins.third-party/required-plugin true && composer config minimum-stability dev && composer config prefer-stable true
+
+    - name: Configure dependencies
+      run: composer require mediawiki/oauthclient:2.3.0 && composer require phpstan/phpstan:^1.12.9
 
     - name: Install dependencies
       if: steps.composer-cache.outputs.cache-hit != 'true'
