--- a/.github/workflows/test-suite.yml
+++ b/.github/workflows/test-suite.yml
@@ -41,7 +41,7 @@ jobs:
       run: composer config allow-plugins.third-party/required-plugin true && composer config minimum-stability dev && composer config prefer-stable true
 
     - name: Configure dependencies
-      run: composer require mediawiki/oauthclient:2.3.0 phpunit/phpunit:9.*.* phpunit/php-invoker
+      run: composer require phpunit/phpunit:9.*.* phpunit/php-invoker
 
     - name: Install dependencies
       if: steps.composer-cache.outputs.cache-hit != 'true'
