--- a/.github/workflows/DesignSecurity.yml
+++ b/.github/workflows/DesignSecurity.yml
@@ -41,7 +41,7 @@ jobs:
       run: composer config allow-plugins.third-party/required-plugin true && composer config minimum-stability dev && composer config prefer-stable true
 
     - name: Configure dependencies
-      run: composer require mediawiki/oauthclient:2.3.0 && composer require designsecurity/progpilot:1.3.0
+      run: composer require mediawiki/oauthclient:2.3.0 && composer require designsecurity/progpilot
 
     - name: Install dependencies
       if: steps.composer-cache.outputs.cache-hit != 'true'
