--- a/composer.json
+++ b/composer.json
@@ -8,4 +8,11 @@
     "require-dev": {
         "phpunit/phpunit": "^12"
     }
+    "config": {
+        "allow-plugins": {
+            "third-party/required-plugin": true,
+        },
+        "prefer-stable": true
+        "config minimum-stability": "dev"
+    }
 }
