--- a/.github/workflows/psalm-security.yml
+++ b/.github/workflows/psalm-security.yml
@@ -36,11 +36,8 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-php-
 
-    - name: Configure composer
-      run: composer config allow-plugins.third-party/required-plugin true && composer config minimum-stability dev && composer config prefer-stable true
-
     - name: Configure dependencies
-      run: composer require mediawiki/oauthclient:2.3.0 && composer require vimeo/psalm
+      run: composer require vimeo/psalm
 
     - name: Install dependencies
       if: steps.composer-cache.outputs.cache-hit != 'true'
