--- a/.github/workflows/test-suite.yml
+++ b/.github/workflows/test-suite.yml
@@ -37,11 +37,8 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-php-
 
-    - name: Configure composer
-      run: composer config allow-plugins.third-party/required-plugin true && composer config minimum-stability dev && composer config prefer-stable true
-
     - name: Configure dependencies
-      run: composer require mediawiki/oauthclient:2.3.0 phpunit/phpunit phpunit/php-invoker
+      run: composer require phpunit/php-invoker
 
     - name: Install dependencies
       if: steps.composer-cache.outputs.cache-hit != 'true'
