--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     },
     "config": {
         "allow-plugins": {
-            "third-party/required-plugin": true,
+            "third-party/required-plugin": true
         },
         "prefer-stable": true,
         "config minimum-stability": "dev"
