--- a/composer.json
+++ b/composer.json
@@ -7,5 +7,12 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^12"
+    },
+    "config": {
+        "allow-plugins": {
+            "third-party/required-plugin": true
+        },
+        "prefer-stable": true,
+        "config minimum-stability": "dev"
     }
 }
