--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <phpunit
-        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-        xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/10.1/phpunit.xsd"
-        colors="true"
-        requireCoverageMetadata="true"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/10.1/phpunit.xsd"
+  colors="true"
+  requireCoverageMetadata="false"
+  beStrictAboutCoverageMetadata="false"
+  processIsolation="false"
+  failOnPhpunitDeprecation="true"
+  failOnRisky="true"
+  failOnWarning="true"
 >
   <testsuites>
     <testsuite name="TestSuite">
