move all hard-coded PHP dependencies into composer.json "dev" section
fixes #4898

--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,8 @@
         "mediawiki/oauthclient": "2.3.0"
     },
     "require-dev": {
+        "phan/phan": "^5",
+        "phpunit/php-invoker": "^6",
         "phpunit/phpunit": "^12"
     },
     "config": {
