--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,13 @@
         "mediawiki/oauthclient": "2.3.0"
     },
     "require-dev": {
+        "designsecurity/progpilot": "^1",
+        "overtrue/phplint": "^9",
         "phan/phan": "^5",
+        "phpstan/phpstan": "^1.12.32",
         "phpunit/php-invoker": "^6",
-        "phpunit/phpunit": "^12"
+        "phpunit/phpunit": "^12",
+        "vimeo/psalm": "^6"
     },
     "config": {
         "allow-plugins": {
