--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
             "third-party/required-plugin": true
         },
         "prefer-stable": true,
-        "config minimum-stability": "dev"
+        "config minimum-stability": "dev",
+        "preferred-install": "dist"
     }
 }
