--- a/.github/workflows/DesignSecurity.yml
+++ b/.github/workflows/DesignSecurity.yml
@@ -28,7 +28,7 @@ jobs:
       run: composer validate
 
     - name: Install dependencies
-      run: composer install --prefer-dist  -vvv --no-progress
+      run: composer install -vvv --no-progress
 
     - name: PHP Design Security
       run: ./vendor/bin/progpilot --configuration progpilot.yml category.php generate_template.php gitpull.php linked_pages.php process_page.php authenticate.php
