--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -28,7 +28,7 @@ jobs:
       run: composer validate
 
     - name: Install dependencies
-      run: composer install --prefer-dist  -vvv --no-progress
+      run: composer install -vvv --no-progress
 
     - name: PHP Lint test
       run: ./vendor/bin/phplint --exclude=vendor --no-interaction --no-configuration -vv ./
