--- a/.github/workflows/phpstan.yml
+++ b/.github/workflows/phpstan.yml
@@ -28,7 +28,7 @@ jobs:
       run: composer validate
 
     - name: Install dependencies
-      run: composer install --prefer-dist  -vvv --no-progress
+      run: composer install -vvv --no-progress
 
     - name: PHP phpstan
       run: php ./vendor/bin/phpstan --no-interaction analyse --memory-limit=2G constants/*.php Parameter.php user_messages.php constants.php big_jobs.php setup.php expandFns.php Zotero.php apiFunctions.php NameTools.php Comment.php Page.php WikipediaBot.php Template.php category.php generate_template.php linked_pages.php process_page.php authenticate.php
