--- a/.github/workflows/test-suite.yml
+++ b/.github/workflows/test-suite.yml
@@ -29,7 +29,7 @@ jobs:
       run: composer validate
 
     - name: Install dependencies
-      run: composer install --prefer-dist  -vvv --no-progress
+      run: composer install -vvv --no-progress
       
     - name: Full test with PHP
       env:
