--- a/.github/workflows/phan.yml
+++ b/.github/workflows/phan.yml
@@ -31,5 +31,5 @@ jobs:
       run: composer install --prefer-dist  -vvv --no-progress
 
     - name: PHP phan
-      run: php ./vendor/bin/phan --analyze-twice --allow-polyfill-parser --target-php-version='8.4' --minimum-target-php-version='8.4'
+      run: php ./vendor/bin/phan --analyze-twice --allow-polyfill-parser
      
