--- a/.github/workflows/psalm-security.yml
+++ b/.github/workflows/psalm-security.yml
@@ -31,4 +31,4 @@ jobs:
       run: composer install --prefer-dist  -vvv --no-progress
 
     - name: PHP psalm Taint
-      run: php ./vendor/bin/psalm --taint-analysis --php-version='8.4'
+      run: php ./vendor/bin/psalm --taint-analysis
