--- a/.github/workflows/psalm.yml
+++ b/.github/workflows/psalm.yml
@@ -31,4 +31,4 @@ jobs:
       run: composer install --prefer-dist  -vvv --no-progress
 
     - name: PHP psalm
-      run: php ./vendor/bin/psalm --php-version='8.4'
+      run: php ./vendor/bin/psalm
