--- a/.github/workflows/psalm.yml
+++ b/.github/workflows/psalm.yml
@@ -21,9 +21,8 @@ jobs:
       uses: shivammathur/setup-php@v2
       with:
         php-version: '8.4'
-        ini-values: pcov.directory=.
+        ini-values: pcov.directory=. opcache.enable_cli=0 opcache.jit=disable
         coverage: pcov
-        extensions: ':opcache' # The colon disables the extension
 
     - name: Validate composer.json and composer.lock
       run: composer validate
