--- a/.github/workflows/psalm.yml
+++ b/.github/workflows/psalm.yml
@@ -17,12 +17,10 @@ jobs:
     - name: Checkout Repo
       uses: actions/checkout@v6.0.0
 
-    - name: Setup PHP with PCOV
+    - name: Setup PHP without PCOV
       uses: shivammathur/setup-php@v2
       with:
         php-version: '8.4'
-        ini-values: pcov.directory=. opcache.enable_cli=0 opcache.jit=disable
-        coverage: pcov
 
     - name: Validate composer.json and composer.lock
       run: composer validate
