--- a/.github/workflows/psalm-security.yml
+++ b/.github/workflows/psalm-security.yml
@@ -17,7 +17,7 @@ jobs:
     - name: Checkout Repo
       uses: actions/checkout@v6.0.0
 
-    - name: Setup PHP without PCOV
+    - name: Setup PHP
       uses: shivammathur/setup-php@v2
       with:
         php-version: '8.4'
