--- a/.github/workflows/psalm.yml
+++ b/.github/workflows/psalm.yml
@@ -32,4 +32,4 @@ jobs:
       run: composer install -vvv --no-progress
 
     - name: PHP psalm
-      run: php ./vendor/bin/psalm
+      run: php ./vendor/bin/psalm --memory-limit=2G
