--- a/.github/workflows/psalm-security.yml
+++ b/.github/workflows/psalm-security.yml
@@ -29,7 +29,7 @@ jobs:
       run: composer remove --dev designsecurity/progpilot overtrue/phplint phan/phan phpstan/phpstan phpunit/php-invoker phpunit/phpunit 
 
     - name: Install dependencies
-      run: composer install -vvv --no-progress --memory-limit=2G
+      run: composer install -vvv --no-progress
 
     - name: PHP psalm Taint
-      run: php ./vendor/bin/psalm --taint-analysis
+      run: php ./vendor/bin/psalm --taint-analysis --memory-limit=2G
