--- a/.github/workflows/psalm-security.yml
+++ b/.github/workflows/psalm-security.yml
@@ -25,8 +25,11 @@ jobs:
     - name: Validate composer.json and composer.lock
       run: composer validate
 
+    - name: Remove conflicting packages
+      run: composer remove --dev designsecurity/progpilot overtrue/phplint phan/phan phpstan/phpstan phpunit/php-invoker phpunit/phpunit 
+
     - name: Install dependencies
       run: composer install -vvv --no-progress
 
     - name: PHP psalm Taint
-      run: php ./vendor/bin/psalm --taint-analysis
+      run: php ./vendor/bin/psalm --taint-analysis --memory-limit=4G
