--- a/.github/workflows/psalm.yml
+++ b/.github/workflows/psalm.yml
@@ -21,6 +21,7 @@ jobs:
       uses: shivammathur/setup-php@v2
       with:
         php-version: '8.4'
+        extensions: mbstring, intl, dom, filter, json, libxml, pcre, reflection, simplexml, spl, tokenizer
 
     - name: Validate composer.json and composer.lock
       run: composer validate
