--- a/.github/workflows/psalm-security.yml
+++ b/.github/workflows/psalm-security.yml
@@ -21,7 +21,7 @@ jobs:
       uses: shivammathur/setup-php@v2
       with:
         php-version: '8.4'
-        extensions: mbstring, intl, dom, filter, json, libxml, pcre, reflection, simplexml, spl, tokenizer
+        extensions: mbstring, intl, dom, filter, json, libxml, pcre, reflection, simplexml, spl, tokenizer, :opcache
 
     - name: Validate composer.json and composer.lock
       run: composer validate
