--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -21,6 +21,7 @@ jobs:
       uses: shivammathur/setup-php@v2
       with:
         php-version: '8.4'
+        coverage: none
 
     - name: Validate composer.json and composer.lock
       run: composer validate
