--- a/.github/workflows/phpstan.yml
+++ b/.github/workflows/phpstan.yml
@@ -17,12 +17,11 @@ jobs:
     - name: Checkout Repo
       uses: actions/checkout@v6.0.0
 
-    - name: Setup PHP with PCOV
+    - name: Setup PHP
       uses: shivammathur/setup-php@v2
       with:
         php-version: '8.4'
-        ini-values: pcov.directory=.
-        coverage: pcov
+        coverage: none
 
     - name: Validate composer.json and composer.lock
       run: composer validate
