--- a/.github/workflows/PHPChecker.yml
+++ b/.github/workflows/PHPChecker.yml
@@ -20,5 +20,8 @@ jobs:
     - name: Validate composer.json and composer.lock
       run: composer validate
 
+    - name: Install dependencies
+      run: composer install -vvv --no-progress
+
     - name: PHP Security Checker
       uses: StephaneBour/actions-php-security-checker@1.2
