add PHP to composer.json (#4945)

--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
     "license": "GPL-3.0-or-later",
     "description": "Expands CS1/CS2 citation templates on Wikipedia",
     "require": {
-        "mediawiki/oauthclient": "2.3.0"
+        "mediawiki/oauthclient": "2.3.0",
+        "php": ">=8.4"
     },
     "require-dev": {
         "designsecurity/progpilot": "^1",
