--- a/.github/workflows/ThePHPChecker.yml
+++ b/.github/workflows/ThePHPChecker.yml
@@ -27,7 +27,7 @@ jobs:
       run: composer validate
 
     - name: Create composer.lock file
-      run: composer update --lock
+      run: composer update
 
     - name: The PHP Security Checker
       uses: symfonycorp/security-checker-action@v5
