--- a/.github/workflows/PHPChecker.yml
+++ b/.github/workflows/PHPChecker.yml
@@ -27,7 +27,7 @@ jobs:
       run: composer validate
 
     - name: Create composer.lock file
-      run: composer update
+      run: composer update --no-install
 
     - name: PHP Security Checker
       uses: StephaneBour/actions-php-security-checker@1.2
