Does not need to install, just reads lock file (#4949)

--- a/.github/workflows/ThePHPChecker.yml
+++ b/.github/workflows/ThePHPChecker.yml
@@ -26,8 +26,8 @@ jobs:
     - name: Validate composer.json and composer.lock
       run: composer validate
 
-    - name: Install dependencies
-      run: composer install -vvv --no-progress
+    - name: Create composer.lock file
+      run: composer update --no-install
 
     - name: The PHP Security Checker
       uses: symfonycorp/security-checker-action@v5
