--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,9 +5,9 @@ updates:
 - package-ecosystem: "composer"
   directory: "/"
   schedule:
-    interval: "daily"
+    interval: "weekly"
     
 - package-ecosystem: "github-actions"
   directory: "/"
   schedule:
-   interval: "daily"
+   interval: "weekly"
