--- a/.github/workflows/psalm.yml
+++ b/.github/workflows/psalm.yml
@@ -30,4 +30,4 @@ jobs:
       run: composer install -vvv --no-progress
 
     - name: PHP psalm
-      run: php ./vendor/bin/psalm --memory-limit=4G
+      run: PSALM_ALLOW_XDEBUG=1 php ./vendor/bin/psalm --memory-limit=4G
