phplint: improve documentation & naming
Why
- I was confused about what PHPLint does

What
- rename lint.yml to phplint.yml, in case an additional linter is added in the future (which we may do, since we're using phplint for syntax checking rather than style checking)
- add .phplint.cache/* to gitignore. running phplint locally generates hundreds of files here
- rename CI job to "PHPLint (PHP syntax check - no style rules)" to make it clearer that this is only checking syntax. normally when I think of a linter I think of style checking

--- a/.github/workflows/test-suite.yml
+++ b/.github/workflows/test-suite.yml
@@ -9,9 +9,9 @@ on:
       - 'docs/**'
       - '.github/workflows/codeql-analysis.yml'
       - '.github/workflows/DesignSecurity.yml'
-      - '.github/workflows/lint.yml'
       - '.github/workflows/phan.yml'
       - '.github/workflows/PHPChecker.yml'
+      - '.github/workflows/phplint.yml'
       - '.github/workflows/phpstan.yml'
       - '.github/workflows/psalm-security.yml'
       - '.github/workflows/psalm.yml'
