only scan Template.php. rename ruleset file

--- a/.github/workflows/PHPCodeSniffer.yml
+++ b/.github/workflows/PHPCodeSniffer.yml
@@ -30,5 +30,4 @@ jobs:
       uses: php-actions/phpcs@v1
       with:
         php_version: 8.4
-        path: /
-        standard: ruleset.xml
+        standard: .phpcs.xml
