Template.php: fix indentation (#4996)
* Template.php: fix indentation

Why
- Template.php has odd indentation (1 space) compared to the rest of the repo (4 spaces)
- We should start setting style lint rules in a rules file (ruleset.xml), doing autofixes using phpcbf, and we should keep things we've fixed from creeping back into the repo by adding the style linter to CI.

What
- Run PHP CodeSniffer autofixes on Template.php, using only indentation rules.
- I used 4 spaces as the standard, although I personally prefer 1 tab
- Also add PHP CodeSniffer to CI. I copied the .yml file from #4992, but removed the cron job. I don't see why a style linter would need to run weekly. I also simplified the composer install command to `composer install -vvv --no-progress`.

In the future, we can slowly autofix more files and add more rules.

TODO before merging:
- manually test that we didn't break the bot with our Template.php changes
- let the CI job PHP CodeSniffer complete and make sure it passes

If you want to recreate what I did on localhost...
- check out the patch
- `docker exec -it citation-bot-php-1 /bin/bash` - opens a shell inside the container
- `composer update` - to install PHP CodeSniffer
- `./vendor/bin/phpcbf --standard=ruleset.xml -d memory_limit=1000M` - runs the autofixes. increased memory limit needed because Template.php is so big. lol

`phpcs` does read only scans. `phpcbf` does auto fixing. They are installed by the same package, squizlabs/php_codesniffer.

Related #4956 (but doesn't close out that ticket yet, since we still need to autofix more files)

* only scan Template.php. rename ruleset file

* remove size limit scan from CI, since we plan to ignore it

* alphabetize packages

* Update CONTRIBUTING.md

--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "phpstan/phpstan": "^2.1.32",
         "phpunit/php-invoker": "^6",
         "phpunit/phpunit": "^12",
+        "squizlabs/php_codesniffer": "^4.0",
         "vimeo/psalm": "^6"
     },
     "config": {
