--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -15,7 +15,7 @@
       <directory suffix=".php">.</directory>
     </include>
     <exclude>
-      <directory>./constants</directory>
+      <directory>./includes/constants</directory>
       <directory>./tests</directory>
       <directory>./vendor</directory>
       <file>./process_page.php</file>
@@ -23,7 +23,7 @@
       <file>./category.php</file>
       <file>./linked_pages.php</file>
       <file>./authenticate.php</file>
-      <file>./setup.php</file>
+      <file>./includes/setup.php</file>
       <file>./kill_big_job.php</file>
       <file>./big_jobs.php</file>
     </exclude>
