Do not run if others tests change

--- a/.github/workflows/test-suite.yml
+++ b/.github/workflows/test-suite.yml
@@ -29,6 +29,7 @@ on:
       - 'progpilot.yml'
       - 'psalm.xml'
       - '.trivyignore'
+      - '.phpcs.xml'
 
   schedule:
     - cron: '25 17 * * 1'
