--- a/.github/workflows/test-suite.yml
+++ b/.github/workflows/test-suite.yml
@@ -30,6 +30,7 @@ on:
       - 'psalm.xml'
       - '.trivyignore'
       - '.phpcs.xml'
+      - '.phplint.yml'
 
   schedule:
     - cron: '25 17 * * 1'
