--- a/.github/workflows/test-suite.yml
+++ b/.github/workflows/test-suite.yml
@@ -20,7 +20,7 @@ on:
       - '.github/workflows/trivy-analysis.yml'
       - '.gitignore'
       - '.phan'
-      - 'phan/config.php'
+      - 'phan/config.php'dasfdsfsa
       - 'docker-compose.yml'
       - 'Dockerfile'
       - 'index.html'
