Update test-suite.yml - do not run if readme is updated

--- a/.github/workflows/test-suite.yml
+++ b/.github/workflows/test-suite.yml
@@ -32,6 +32,7 @@ on:
       - '.trivyignore'
       - '.phpcs.xml'
       - '.phplint.yml'
+      - 'tests/phpunit/README.md'
 
   schedule:
     - cron: '25 17 * * 1'
