--- a/env.php.example
+++ b/env.php.example
@@ -32,7 +32,7 @@ if (!getenv('PHP_OAUTH_CONSUMER_TOKEN')) {
         @putenv('NLM_EMAIL=xxxxx');
         // This is the password to use when visiting https://citation.toolforge.org/gitpull.php?password=xxxxx in order to deploy the bot's latest code from GitHub to Toolforge. This keeps random people from being able to deploy the bot.
         @putenv('DEPLOY_PASSWORD=xxxxx');
-    } catch (Throwable $e) {
+    } catch (Throwable) {
         echo 'Error in env.php';
     }
 }
