fix sessions path

--- a/src/.user.ini
+++ b/src/.user.ini
@@ -13,7 +13,7 @@ session.gc_divisor = 100
 session.cookie_lifetime  = 610000
 session.name = "CiteBot"
 ; This way we can delete them
-session.save_path = "../sessions"
+session.save_path = "../../sessions"
 ;
 ; We use a custom path, so garbage collector does not work
 ;
