--- a/.github/workflows/test-suite.yml
+++ b/.github/workflows/test-suite.yml
@@ -81,7 +81,7 @@ jobs:
       run: /bin/cat ./CodeCoverage
 
     - name: Code Coverage
-      if: ${{ github.event_name == 'schedule' || github.event_name == 'push' }}
+      if: github.event_name != 'pull_request'
       env:
          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
       uses: codecov/codecov-action@v5.5.2
