--- a/.github/workflows/test-suite.yml
+++ b/.github/workflows/test-suite.yml
@@ -81,7 +81,8 @@ jobs:
       run: /bin/cat ./CodeCoverage
 
     - name: Code Coverage
-      if: github.event_name != 'pull_request'
+      if: always()
+      uses: codecov/codecov-action@v5.5.2
       env:
          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
-      uses: codecov/codecov-action@v5.5.2
+
