--- a/.github/workflows/html5check.yml
+++ b/.github/workflows/html5check.yml
@@ -9,14 +9,16 @@ on:
         - cron: '25 17 * * 1'
 
 jobs:
+  build:
     runs-on: ubuntu-22.04
 
     steps:
     - name: Checkout Repo
       uses: actions/checkout@v6.0.1
     
-    - name: 
+    - name: Run validator
       uses: Cyb3r-Jak3/html5validator-action
       with:
         root: src/
         blacklist: invalid
+        css: true
