phpcs: change to mediawiki ruleset
Why
- right now we are slowly adding PHPCS rules
- let's invert our strategy. let's instead start with a <ruleset> and exclude all the failing rules.
- then we can slowly remove the exclusions as we fix each rule.
- benefits:
    - less thinking about what rules to add
	- can get the benefit of enforcement of a bunch of good rules right away (the ones that come with the ruleset that we haven't added to the exclusion list)
    - aligned with what MediaWiki developers use
    - there is surely a "wisdom of the group" in the rules they've chosen to add
- any rules that annoy us, such as max line length 100 characters, or spaces inside parentheses, we can just keep excluded forever

What
- remove library phpcs
- add library mediawiki/mediawiki-codesniffer, which includes phpcs
- add "scripts" section to composer.json, for more easily running certain linters without having to remember their `--options`

--- a/.github/workflows/PHPCodeSniffer.yml
+++ b/.github/workflows/PHPCodeSniffer.yml
@@ -27,4 +27,4 @@ jobs:
       run: composer install -vvv --no-progress
 
     - name: PHP CodeSniffer
-      run: ./vendor/bin/phpcs --standard=.phpcs.xml -d memory_limit=1000M
+      run: composer run-script phpcs
